Fix z-index bug

--- a/src/css/04-components/_header.scss
+++ b/src/css/04-components/_header.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
   color: var(--white);
   transition: background-color 200ms;
 
